--- a/assets/index.css
+++ b/assets/index.css
@@ -61,3 +61,10 @@
     color: white;
     margin: 15px;
 }
+
+.btn-grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    gap: 15px;
+}
