--- a/assets/index.css
+++ b/assets/index.css
@@ -22,7 +22,7 @@
     background-color: antiquewhite;
     border-radius: 5px;
     border: 3px solid rgb(24, 45, 107);
-    font-size: 22px;
+    font-size: 18px;
 }
 
 .btn:hover {
@@ -77,6 +77,12 @@
     border: 3px solid rgb(24, 45, 107);
 }
 
+.quiz-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .highscore-screen {
     background-color: rgb(167, 17, 167);
     padding: 30px;
@@ -91,12 +97,19 @@
 
 #highscore-heading {
     text-decoration: underline;
+    font-size: 1.7rem;
 }
 
 #highscore-heading, #display-highscore-1, #display-highscore-2, #display-highscore-3 {
     margin: 15px;
     margin-bottom: 25px;
 }
+
+#display-highscore-1, #display-highscore-2, #display-highscore-3 {
+    font-size: 1.25rem;
+}
+
+
 
 
 
@@ -105,16 +118,19 @@
 }
 
 #question {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-weight: bold;
     color: antiquewhite;
     margin: 15px;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 #correct-or-wrong-text {
     font-size: 1.5rem;
     color: antiquewhite;
     margin: 15px;
+    font-style: italic;
 }
 
 .btn-grid {
@@ -122,4 +138,42 @@
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(2, auto);
     gap: 15px;
+}
+
+
+@media only screen and (max-width: 550px) {
+    .header {
+        flex-direction: column;
+    }
+
+    #current-game-score {
+        margin-top: 20px;
+    }
+
+    #highscore-heading {
+        font-size: 1.5rem;
+    }
+
+    #display-highscore-1, #display-highscore-2, #display-highscore-3 {
+        font-size: 1rem;
+    }
+}
+
+
+@media only screen and (max-width: 1050px) {
+    .btn {
+        padding: 15px 8px;
+        font-size: 14px;
+    }
+
+    #question {
+        font-size: 24px;
+    }
+
+    .question-container {
+        padding: 40px;
+        width: 70%;
+        margin-bottom: 30px;
+    }
+    
 }
